Fixed focus and wrapping

--- a/apps/intern/src/components/Beregning/Beregning.module.css
+++ b/apps/intern/src/components/Beregning/Beregning.module.css
@@ -50,3 +50,18 @@
 	margin: calc(-1 * var(--ax-space-48));
 	margin-bottom: var(--ax-space-48);
 }
+
+@media (max-width: 1280px) {
+	.beregning {
+		padding: var(--ax-space-24);
+	}
+
+	.tableRow {
+		flex-direction: column;
+	}
+
+	.globalAlert {
+		margin: calc(-1 * var(--ax-space-24));
+		margin-bottom: var(--ax-space-24);
+	}
+}
